src/objects/Boomi_Log__c.object
<CustomObject>
    <description>Logging for the nightly Boomi sync process</description>
    <fields>
        <fullName>DB_Count__c</fullName>
        <label>DB Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Delta__c</fullName>
        <label>DB Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Total__c</fullName>
        <label>DB Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doc_Count__c</fullName>
        <label>Doc Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(FLOOR( MOD( (End_Time__c  -  Start_Time__c) * 24, 24 ) )&gt;0, 
     text(FLOOR( MOD( (End_Time__c  -  Start_Time__c) * 24, 24 ) )) + &quot;:&quot;, &quot;&quot;) +

IF(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60, 60 ), 0 )&lt;10,&quot;0&quot;,&quot;&quot;) + 
text(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60, 60 ), 0 )) + &apos;:&apos; +

IF(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60 * 60, 60 ), 0 )&lt;10,&quot;0&quot;,&quot;&quot;) + 
text(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60 * 60, 60 ), 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Boomi Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>01 All</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>20 Errors</label>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>05 Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>P1_Episys_Names</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Episys User ID</value>
        </filters>
        <label>P1 - Episys Names</label>
    </listViews>
    <listViews>
        <fullName>P2_Accounts</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Accounts (Delta)</value>
        </filters>
        <label>P2 - Accounts</label>
    </listViews>
    <listViews>
        <fullName>P3_Persons</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Person (Full)</value>
        </filters>
        <label>P3 - Persons</label>
    </listViews>
    <listViews>
        <fullName>P4_PA_Cleanup</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>PA Cleanup (Full)</value>
        </filters>
        <label>P4 - PA Cleanup</label>
    </listViews>
    <listViews>
        <fullName>P4_Person_Accounts</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>PersonAccount (Full)</value>
        </filters>
        <label>P4 - Person Accounts</label>
    </listViews>
    <listViews>
        <fullName>P5_Episys_Notes</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Episys Notes (Delta)</value>
        </filters>
        <label>P5 - Episys Notes</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>04 This Week</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>DB_Delta__c</columns>
        <columns>DB_Total__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>02 Today</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>03 Yesterday</label>
    </listViews>
    <nameField>
        <label>Boomi Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boomi Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>